=======
CHANGES
=======

0.3.0
-----

* renamed again to pathogenie

0.2.0
------

* renamed to pygenefinder
* converted gui to use pyside2
* added project files
* prokka type genome annotation with blast/prodigal/hmmer and aragorn
* can view features in tables
* dna_features_viewer for viewing annotations
* threading and progress bar for processes

0.1.0
------

* load fasta files
* run on a selection of reference dbs from abricate
* view tables of results and a summary plot
* windows gui standalone version