@@ -57,7 +57,7 @@ class DataFrameTable(QTableView):
     """
     QTableView with pandas DataFrame as model.
     """
-    def __init__(self, parent=None, dataframe=None, font=None, *args):
+    def __init__(self, parent=None, dataframe=None, fontsize=12, *args):
 
         QTableView.__init__(self)
         self.clicked.connect(self.showSelection)
@@ -86,10 +86,7 @@ class DataFrameTable(QTableView):
         self.setCornerButtonEnabled(True)
         self.setSortingEnabled(True)
 
-        if font != None:
-            self.font = font
-        else:
-            self.font = QFont("Arial", 12)
+        self.font = QFont("Arial", fontsize)
         self.setFont(self.font)
         tm = DataFrameModel(dataframe)
         self.setModel(tm)
@@ -128,7 +125,7 @@ class DataFrameTable(QTableView):
     def zoomIn(self):
 
         s = self.font.pointSize()
-        self.font.setPointSize(s+2)
+        self.font.setPointSize(s+1)
         self.setFont(self.font)
         vh = self.verticalHeader()
         h = vh.defaultSectionSize()
@@ -138,11 +135,11 @@ class DataFrameTable(QTableView):
     def zoomOut(self):
 
         s = self.font.pointSize()
-        self.font.setPointSize(s-2)
+        self.font.setPointSize(s-1)
         self.setFont(self.font)
         vh = self.verticalHeader()
         h = vh.defaultSectionSize()
-        vh.setDefaultSectionSize(h-4)
+        vh.setDefaultSectionSize(h-2)
         return
 
     def importFile(self, filename=None, dialog=False, **kwargs):
@@ -422,9 +419,9 @@ class FilesTable(DataFrameTable):
     """
     QTableView for files view.
     """
-    def __init__(self, parent=None, app=None, dataframe=None, font=None, *args):
+    def __init__(self, parent=None, app=None, dataframe=None, fontsize=12, *args):
         #super(DataFrameTable, self).__init__()
-        DataFrameTable.__init__(self, parent, dataframe, font)
+        DataFrameTable.__init__(self, parent, dataframe, fontsize)
         self.app = app
         self.setWordWrap(False)
         header = self.horizontalHeader()
@@ -517,9 +514,9 @@ class FeaturesTable(DataFrameTable):
     QTableView with pandas DataFrame as model.
     """
     def __init__(self, parent=None, app=None, dataframe=None,
-                 font=None, name=None, *args):
+                 fontsize=12, name=None, *args):
 
-        DataFrameTable.__init__(self, parent, dataframe, font)
+        DataFrameTable.__init__(self, parent, dataframe, fontsize)
         self.app = app
         self.name = name
         self.setWordWrap(False)
